--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "storybook:build": "build-storybook"
   },
   "dependencies": {
+    "@lrnwebcomponents/intersection-element": "^3.0.0",
+    "@lrnwebcomponents/simple-colors": "^3.0.6",
+    "@lrnwebcomponents/simple-icon": "^3.0.6",
+    "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
-    "lit-element": "^2.4.0"
+    "simple-colors": "^0.1.0"
   },
   "devDependencies": {
-    "@web/dev-server": "^0.1.14",
-    "eslint": "^7.24.0",
     "@open-wc/eslint-config": "^4.2.0",
-    "prettier": "^2.2.1",
+    "@open-wc/testing": "^2.5.32",
+    "@web/dev-server": "^0.1.14",
+    "@web/dev-server-storybook": "^0.3.5",
+    "@web/test-runner": "^0.12.20",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^7.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "@web/test-runner": "^0.12.20",
-    "@open-wc/testing": "^2.5.32",
-    "@web/dev-server-storybook": "^0.3.5"
+    "prettier": "^2.2.1"
   },
   "eslintConfig": {
     "extends": [
